added controls splash screen

--- a/TPGameDemo/Config/DefaultGame.ini
+++ b/TPGameDemo/Config/DefaultGame.ini
@@ -1,2 +1,34 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=C6B3E5094EFC77BA38489FB737779608
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Development
+StagingDirectory=(Path="D:/Documents/Dev/UnrealGitExample/TPGameDemo/Build")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+bNativizeBlueprintAssets=False
+UsePakFile=True
+bGenerateChunks=False
+bChunkHardReferencesOnly=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path=)
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+ApplocalPrerequisitesDirectory=(Path=)
+IncludeCrashReporter=True
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+DefaultCulture=en
+bCookAll=False
+bCookMapsOnly=False
+bCompressed=False
+bEncryptIniFiles=False
+bSkipEditorContent=False
+-DirectoriesToAlwaysStageAsNonUFS=(Path="Characters/Enemies/LevelPolicies")
+-DirectoriesToAlwaysStageAsNonUFS=(Path=)
++DirectoriesToAlwaysStageAsNonUFS=(Path="Characters/Enemies/LevelPolicies")
++DirectoriesToAlwaysStageAsNonUFS=(Path="Levels")
+
+
