--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ TPGameDemo/Intermediate
 TPGameDemo/Saved
 TPGameDemo/TPGameDemo.VC.db
 TPGameDemo/Build
+TPGameDemo 4.18/Binaries
+TPGameDemo 4.18/DerivedDataCache
+TPGameDemo 4.18/Intermediate
+TPGameDemo 4.18/Saved
+TPGameDemo 4.18/TPGameDemo.VC.db
+TPGameDemo 4.18/Build
