--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ TPGameDemo 4.18/Intermediate
 TPGameDemo 4.18/Saved
 TPGameDemo 4.18/TPGameDemo.VC.db
 TPGameDemo 4.18/Build
+TPGameDemo 4.18/Plugins/UnrealEnginePython
