implementing room manager

--- a/TPGameDemo 4.18/Config/DefaultEngine.ini
+++ b/TPGameDemo 4.18/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Game/GameModes/StandardGameMode.StandardGameMode_C
+GlobalDefaultGameMode=/Game/GameModeState/TPGameModeBP.TPGameModeBP_C
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 EditorStartupMap=/Game/Levels/MainMenu.MainMenu
 
@@ -51,3 +51,5 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
+
+
