--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@ TPGameDemo 4.18/Saved
 TPGameDemo 4.18/TPGameDemo.VC.db
 TPGameDemo 4.18/Build
 TPGameDemo 4.18/Plugins/UnrealEnginePython
+TPGameDemo 4.19/Binaries
+TPGameDemo 4.19/DerivedDataCache
+TPGameDemo 4.19/Intermediate
+TPGameDemo 4.19/Saved
+TPGameDemo 4.19/TPGameDemo.VC.db
+TPGameDemo 4.19/Build
+TPGameDemo 4.19/Plugins/UnrealEnginePython
 
 *.VC.db
 *.VC.opendb
