--- a/TPGameDemo 4.19/TPGameDemo.uproject
+++ b/TPGameDemo 4.19/TPGameDemo.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.19",
+	"EngineAssociation": "{C15C6961-4F9C-F05D-45E2-AE8C541E9AFA}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
