--- a/TPGameDemo 4.19/Config/DefaultEngine.ini
+++ b/TPGameDemo 4.19/Config/DefaultEngine.ini
@@ -9,7 +9,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Game/GameModeState/TPGameModeBP.TPGameModeBP_C
 GameDefaultMap=/Game/Levels/MainMenu.MainMenu
-EditorStartupMap=/Game/Levels/MainMenu.MainMenu
+EditorStartupMap=/Game/Levels/EmptyLevel.EmptyLevel
 
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
@@ -51,5 +51,4 @@ SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
-
 
