Implemented door open button

--- a/TPGameDemo 4.19/Config/DefaultInput.ini
+++ b/TPGameDemo 4.19/Config/DefaultInput.ini
@@ -47,6 +47,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="item-hotkey-0",Key=Zero,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="item-hotkey-1",Key=One,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="item-hotkey-2",Key=Two,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="interact",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="look-up",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="look-right",Key=MouseX,Scale=1.000000)
 bAlwaysShowTouchInterface=False
