Added mouse wheel camera zoom

--- a/TPGameDemo 4.19/Config/DefaultInput.ini
+++ b/TPGameDemo 4.19/Config/DefaultInput.ini
@@ -50,6 +50,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="interact",Key=E,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="look-up",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="look-right",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="follow-camera-zoom",Key=MouseWheelAxis,Scale=-50.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
