added paragon minions to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ TPGameDemo 4.19/TPGameDemo.VC.db
 TPGameDemo 4.19/Build
 TPGameDemo 4.19/Plugins/UnrealEnginePython
 TPGameDemo 4.19/Content/ParagonGadget
+TPGameDemo 4.19/Content/ParagonMinions
 
 *.VC.db
 *.VC.opendb
