Added camera zoom controller input

--- a/TPGameDemo/Config/DefaultInput.ini
+++ b/TPGameDemo/Config/DefaultInput.ini
@@ -58,11 +58,18 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightTrigger)
 +ActionMappings=(ActionName="move-backwards",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Down)
 +ActionMappings=(ActionName="move-left",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftStick_Left)
++ActionMappings=(ActionName="follow-camera-zoom-out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Down)
++ActionMappings=(ActionName="follow-camera-zoom-in",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_DPad_Up)
++ActionMappings=(ActionName="follow-camera-zoom-out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="follow-camera-zoom-in",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
++ActionMappings=(ActionName="follow-camera-zoom-in",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="follow-camera-zoom-out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +AxisMappings=(AxisName="look-up",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="look-right",Scale=1.000000,Key=Gamepad_RightX)
++AxisMappings=(AxisName="look-right",Scale=3.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="follow-camera-zoom",Scale=-50.000000,Key=MouseWheelAxis)
 +AxisMappings=(AxisName="look-up",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="follow-camera-zoom",Scale=1.000000,Key=Gamepad_DPad_Up)
++AxisMappings=(AxisName="look-right",Scale=1.000000,Key=MouseX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
