Added camera spin back. Should add member variable to base character that determines which is used. Not sure which is best...

--- a/TPGameDemo/Config/DefaultInput.ini
+++ b/TPGameDemo/Config/DefaultInput.ini
@@ -64,6 +64,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="follow-camera-zoom-in",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_RightShoulder)
 +ActionMappings=(ActionName="follow-camera-zoom-in",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="follow-camera-zoom-out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
++ActionMappings=(ActionName="interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +AxisMappings=(AxisName="look-up",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="look-right",Scale=3.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="follow-camera-zoom",Scale=-50.000000,Key=MouseWheelAxis)
