Adding twin stick game mode

--- a/TPGameDemo/Config/DefaultInput.ini
+++ b/TPGameDemo/Config/DefaultInput.ini
@@ -71,6 +71,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="look-up",Scale=1.000000,Key=Gamepad_RightY)
 +AxisMappings=(AxisName="follow-camera-zoom",Scale=1.000000,Key=Gamepad_DPad_Up)
 +AxisMappings=(AxisName="look-right",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="move-cursor-up",Scale=1.000000,Key=Gamepad_RightY)
++AxisMappings=(AxisName="move-cursor-right",Scale=1.000000,Key=Gamepad_RightX)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
