--- a/TPGameDemo/Config/DefaultEngine.ini
+++ b/TPGameDemo/Config/DefaultEngine.ini
@@ -56,6 +56,7 @@ DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,MBPBounds
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AntiAliasing=2
+r.DefaultFeature.Bloom=True
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
