Shift for placement. visual updates

--- a/TPGameDemo/Config/DefaultInput.ini
+++ b/TPGameDemo/Config/DefaultInput.ini
@@ -115,6 +115,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="follow-camera-zoom-out",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=None)
 +ActionMappings=(ActionName="interact",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
 +ActionMappings=(ActionName="boost",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
++ActionMappings=(ActionName="aim-buildable-placement",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_LeftShoulder)
++ActionMappings=(ActionName="aim-buildable-placement",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +AxisMappings=(AxisName="look-up",Scale=1.000000,Key=MouseY)
 +AxisMappings=(AxisName="look-right",Scale=3.000000,Key=Gamepad_RightX)
 +AxisMappings=(AxisName="follow-camera-zoom",Scale=-50.000000,Key=MouseWheelAxis)
